# ASV_Loyola_US

./: .bash_aliases  .gitignore  404.html  Creation_steps.md  MisionesLoyola_dron_2.kml  MisionesLoyola_dron_3.kml  MisionesLoyola_dron_4.kml  MisionesLoyola_dron_6.kml  README.md  TODO.markdown  _config.yml  about.markdown  changes_to_commit.txt  dockerfile_AMD  dockerfile_AMD_backbone  dockerfile_AMD_backbone_local  dockerfile_ARM  dockerfile_ARM_backbone  dockerfile_ARM_backbone_local  dockerfile_ARM_code  dockerfile_ZED2i_Wrapper_Humble_xavier  dockerfile_zed2i-yolov5_backbone  dockerfile_zed2i-yolov5_backbone_orin  dockerfile_zed2i-yolov5_backbone_xavier  funcionamiento.markdown  ideas.md  index.markdown  interfaces.markdown  ip_entrypoint.sh  list_of_TODO.md  maps.markdown  quickstart.markdown  ros_entrypoint.sh  ros_entrypoint_amd.sh  ros_entrypoint_arm.sh  ros_entrypoint_jetson_humble.sh  shortcuts.md  tree.markdown  tutorial.md  workflow.markdown  (+1 more)
8369/: funcionamiento.markdown  quickstart.markdown
Raspberry/: Navio2.markdown  Raspi.markdown
SITL_workspace/: Dockerfile  SITL_Dockerfile  sitl_launch.sh
_posts/: 2022-01-13-version-1-is-out.markdown  2022-01-13-welcome-to-jekyll.markdown  2022-02-03-version-1.0.1-is-out.markdown  2022-02-03-version-1.0.4-is-out.markdown  2022-02-03-version-1.1.0 is out.markdown  2022-02-10-test-2-at-loyola.markdown  2022-02-17-test-3-at-loyola.markdown  2022-02-23-test-1-at-Alamillo.markdown  2022-02-23-test-4-at-loyola.markdown  2022-02-23-test-5-at-loyola.markdown  2022-02-23-test-6-at-loyola.markdown  2022-02-23-test-7-at-loyola.markdown  2022-02-23-test-8-at-loyola.markdown  2022-04-21-test-1-at-Alamillo.markdown
assets/: ASV_parametres.param
asv_workspace/: exec_system.sh
asv_workspace/src/asv_interfaces/: CMakeLists.txt  package.xml
asv_workspace/src/asv_interfaces/action/: Example.action  SensorSample.action
asv_workspace/src/asv_interfaces/msg/: Sensor.msg  Sonar.msg  String.msg
asv_workspace/src/asv_interfaces/srv/: ASVmode.srv  CameraRecord.srv  CommandBool.srv  CommandStr.srv  LoadMap.srv  Newpoint.srv  Newrelativepoint.srv  SensorParams.srv  SensorService.srv  StartSvoRec.srv
asv_workspace/src/asv_loyola_us/: package.xml  setup.cfg  setup.py  workflow.md
asv_workspace/src/asv_loyola_us/asv_loyola_us/: RRT.py  asv_node.py  camera_node.py  database_node.py  dronekit_node.py  mqtt_node.py  nav2_node.py  path_planner_node.py  planner_node.py  sensor_module.py  sensor_module_node.py  server_communication_node.py  sonar_module.py  sonar_node.py  wqp_sensor_node.py
asv_workspace/src/asv_loyola_us/asv_loyola_us/submodulos/: A_star.py  Database.py  KMLMissionGeneration.py  MQTT.py  astar.py  asv_identity.py  call_service.py  dictionary.py  dijkstra.py  quaternion_to_euler.py  str_to_bool.py  terminal_handler.py
asv_workspace/src/asv_loyola_us/config/: config.yaml
asv_workspace/src/asv_loyola_us/launch/: nodes.launch.py  system.launch.py
asv_workspace_local/: exec_system.sh
asv_zed2icamera_workspace/: exec_trash_detection.sh
asv_zed2icamera_workspace/src/zed2i_camera/: package.xml  setup.cfg  setup.py
asv_zed2icamera_workspace/src/zed2i_camera/config/: .config.yaml.swp  config.yaml  gnss_with_fusion.yaml  nav2 copy.yaml  nav2.yaml  slam.yaml
asv_zed2icamera_workspace/src/zed2i_camera/launch/: nodes.launch.py  rosbag.launch.py  zed2i_with_costmap.launch.py
asv_zed2icamera_workspace/src/zed2i_camera/urdf/: ship_descr.urdf.xacro  zed_macro.urdf.xacro  zed_macro.urdfxacro
asv_zed2icamera_workspace/src/zed2i_camera/zed2i_camera/: custom_object_detection.py  custom_object_detection_v0.py  test_node.py
asv_zed2icamera_workspace/src/zed2i_camera/zed2i_camera/utils/: from_pt_to_engine.py  model.py  torch_hub_load.py
code/: Astar.markdown
docs/: 404.md  Gemfile  _config.yml  index.md
src/asv_interfaces/: CMakeLists.txt  Example.markdown  README.md  asv_interfaces.markdown  package.xml
src/asv_interfaces/action/: Example.markdown  Goto.action  Newmission.action  Samplepoint.action
src/asv_interfaces/msg/: Camera.msg  Example.markdown  Example.msg  Location.msg  Nodeupdate.msg  Obstacles.msg  Sensor.msg  Sonar.msg  Status.msg
src/asv_interfaces/srv/: ASVmode.srv  CommandBool.srv  Example.markdown  Example.srv  LoadMission.srv  Newpoint.srv  PlannerParams.srv  SensorParams.srv  SonarService.srv  Takesample.srv
src/asv_loyola_us/: README.md  asv_loyola_us.markdown  package.xml  setup.cfg  setup.markdown  setup.py
src/asv_loyola_us/asv_loyola_us/: camera_node.markdown  camera_node.py  coordinator_node.py  dronekit_node.markdown  dronekit_node.py  mission_node.markdown  mission_node.py  mqtt_node.markdown  mqtt_node.py  new_dronekit_node.py  object_detection_birds_view.py  planner_node.markdown  planner_node.py  sensor_module_node.markdown  sensor_module_node.py  sonar_module.py  startup.py  startup_tunneling.py  watchdog_node.markdown  watchdog_node.py
src/asv_loyola_us/asv_loyola_us copy/: watchdog_node.markdown
src/asv_loyola_us/asv_loyola_us/services/: new_samplepoint.markdown
src/asv_loyola_us/asv_loyola_us/submodulos/: A_star.markdown  A_star.py  Database.py  KMLMissionGeneration.py  MQTT.py  PumpModule.py  SensorModule.py  call_service.py  logger.py  terminal_handler.py
src/asv_loyola_us/config/: config.markdown  config.yaml  dronekit_node.yaml  main_node.yaml  mqtt_node.yaml
src/asv_loyola_us/launch/: launch.markdown  nodes.launch.py  system.launch.py
src/c_example/: CMakeLists.txt  package.xml
src/c_example/launch/: parameters_launch.py
src/c_example/src/: action_client.cpp  action_server.cpp  parameters.cpp
src/python_example/: package.xml  setup.cfg  setup.py
src/python_example/launch/: parameters_launch.py
src/python_example/python_example/: Add2Ints_client.py  action_client.py  action_client_feedback.py  action_server.py  parameters.py
src/simulator/visualizer/: README.md  package.xml  setup.py
src/simulator/visualizer/config/: mavros_param.yaml
src/simulator/visualizer/launch/: start_simulation.py
src/simulator/visualizer/simulator/: test.py
(+124 files in other folders)
