<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asv_loyola_us</name>
  <version>0.0.0</version>
  <description>Working with Navio2 helping the project ASV_Loyola_US merging it in ROS</description>
  <maintainer email="alexcpesp@gmail.com">alejandro</maintainer>
  <license>Apache License 2.0</license>



  <!-- some dependencies -->
  <depend>rclpy</depend> <!-- for python -->
  <depend>asv_interfaces</depend> <!-- for interfaces -->
  <depend>mavros_msgs</depend> <!-- for interfaces -->

  <!-- some tests to run for the packet, inherent -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type> <!-- we will only use python for the time being, no C++ -->
  </export>
</package>
